# BookSource

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/booksource/: bind.h  booksource.h  booksource_parser.h  engine.h  js_binder.h  js_binder.inl  js_utils.h  webbook.h
src/: booksource_parser.cpp  booksource_parser.h  engine.cpp  js_utils.cpp  js_utils.h  main.cpp  peyilo_json_parser.h  peyilo_rule.h
src/main/kotlin/android/: Base64.java  Log.kt  LruCache.kt  TextUtils.kt
src/main/kotlin/android/text/: TextUtils.kt
src/main/kotlin/android/util/: Base64.java
src/main/kotlin/com/script/rhino/: ClassNameMatcher.kt  RhinoClassShutter.kt
src/main/kotlin/org/peyilo/booksource/: BuildConfig.kt  ParseBookSource.kt
src/main/kotlin/org/peyilo/booksource/constant/: AppConst.kt  AppLog.kt  AppPattern.kt  BookSourceType.kt  BookType.kt  EventBus.kt  IntentAction.kt  NotificationId.kt  PageAnim.kt  PreferKey.kt  SourceType.kt  Status.kt  Theme.kt
src/main/kotlin/org/peyilo/booksource/entities/: BookSource.kt
src/main/kotlin/org/peyilo/booksource/exception/: ConcurrentException.kt  ContentEmptyException.kt  EmptyFileException.kt  InvalidBooksDirException.kt  NoBooksDirException.kt  NoStackTraceException.kt  RegexTimeoutException.kt  TocEmptyException.kt
src/main/kotlin/org/peyilo/booksource/help/: AppFreezeMonitor.kt  AppWebDav.kt  CacheManager.kt  ConcurrentRateLimiter.kt  CrashHandler.kt  DefaultData.kt  DirectLinkUpload.kt  EventMessage.kt  ExecutorService.kt  IntentData.kt  IntentHelp.kt  JsEncodeUtils.kt  JsExtensions.kt  LauncherIconHelp.kt  LayoutManager.kt  LifecycleHelp.kt  MediaHelp.kt  PaintPool.kt  ReplaceAnalyzer.kt  RuleBigDataHelp.kt  RuleComplete.kt  TTS.kt
src/main/kotlin/org/peyilo/booksource/model/: AudioPlay.kt  BookCover.kt  CacheBook.kt  CheckSource.kt  Debug.kt  Download.kt  ImageProvider.kt  ReadAloud.kt  ReadBook.kt  ReadManga.kt  SharedJsScope.kt
src/main/kotlin/org/peyilo/booksource/utils/: ACache.kt  ActivityExtensions.kt  ActivityResult.kt  ActivityResultContracts.kt  AlphanumComparator.kt  AnimationExtensions.kt  ArchiveUtils.kt  AsyncFileHandler.kt  BitmapUtils.kt  BookChapterExtensions.kt  ChineseUtils.kt  CollectionExtensions.kt  ColorUtils.kt  ConfigurationExtensions.kt  ConflateLiveData.kt  ConstraintModify.kt  ContextExtensions.kt  ConvertExtensions.kt  CookieManagerExtensions.kt  CoroutineExtensions.kt  CustomExportUtils.kt  Debounce.kt  DebugLog.kt  DialogExtensions.kt  DocumentUtils.kt  DrawableUtils.kt  EncoderUtils.kt  FileUtils.kt  (+51 more)
src/test/kotlin/org/peyilo/booksource/: TestBookSource.java  TestBookSource.kt  TestJsoup.kt  TestUtils.kt  main.kt
src/test/resources/: demo.json
test/: CMakeLists.txt  complex_test.js  project_root.h  test_bs_parse.cpp  test_jsengine.cpp  test_object_bind.cpp  test_quickjs.cpp
test/config/: project_root.h.in  test_utils.in
(+167 files in other folders)
